# mcp-server

./: Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  smithery.yaml
.changeset/: thin-rings-grin.md
.github/workflows/: publish_packages.yml  release.yml
js/: README.md  package-lock.json  package.json
js/src/: index.ts
python/: README.md  pyproject.toml
python/src/e2b_mcp_server/: server.py
