[project]
name = "e2b-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mish Ushakov", email = "mishushakov@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "e2b-code-interpreter>=1.0.2",
    "mcp>=1.0.0",
    "pydantic>=2.10.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
e2b-mcp-server = "e2b_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
